# neural-network-in-cpp

./: .gitignore  CMakeLists.txt  README.md
include/math/: matrix.hpp  random.hpp  vector.hpp
src/: main.cpp  matrix.cpp  vector.cpp
